# BSDPose

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
classifier/: __init__.py  dataset.py  multi_task_head.py
configs/: config.yaml
eval/: __init__.py  build_results_bundle.py  eval_ablation.py  eval_classifier.py  eval_pose.py
features/: __init__.py  kinematic.py
models/: __init__.py  cbam.py  yolov8_cbam_pose.py
paper/: journal_draft.md
scripts/: __init__.py  prepare_bsd.py
train/: train_classifier.py  train_pose.py
